--- a/form.html
+++ b/form.html
@@ -29,10 +29,10 @@
     </style>
 </head>
 <body>
-    <div class="left" style="text-align: center;">
-        <img src="lufy.jpeg" style="height: 300px;width: 300px;;">
+    <div class="left">
+        <img src="lufy.jpeg" style="height: 300px;width: 300px;">
     </div>
-    <div class="right" style="height: 300px;width: 300px;">
+    <div class="right">
             <form style="text-align: center;">
                 <br><br>
                 <label for="uname">UserName </label> <br> 
@@ -42,7 +42,7 @@
                 <input type="submit" value="login" style="text-align: center;"><br><br><br><br><br>
                 <input type="checkbox" id="rem">
                 <label for="rem" style="margin-right: 20%;"> Remember me</label>
-                <a href="google.com">forgot password</a>
+                forgot<a href="https://softroniics.com/"> password?</a>
               </form>
     </div>
     
