--- a/form.html
+++ b/form.html
@@ -29,6 +29,9 @@
     </style>
 </head>
 <body>
+    <div style="margin-top: 160px;margin-left: 350px;">
+
+    
     <div class="left">
         <img src="lufy.jpeg" style="height: 300px;width: 300px;">
     </div>
@@ -45,6 +48,6 @@
                 forgot<a href="https://softroniics.com/"> password?</a>
               </form>
     </div>
-    
+    </div>
 </body>
 </html>
