--- a/photoalbum.html
+++ b/photoalbum.html
@@ -15,43 +15,41 @@
         }
         img{
             margin-top: 10%;
+            border-radius: 50%;
+            width: 160px;
+            height: 160px;
+            margin-left: 10%;
         }
     </style>
 </head>
 <body>
-    <div style="margin-top: 160px;margin-left: 500px;">
+    <div style="margin-top: 100px;margin-left: 350px;">
     <div style="display: flex;">
     <div class="a" style="background-color:rgb(175, 182, 188)">
-        <img src="lufy.jpeg" style="border-radius: 50%;width: 160px;height: 160px;margin-left: 10%;">
-        <p><b> jonson</b></p>
-        <p>Developer</p>
+        <img src="lufy.jpeg" >
+        <p><b> jonson </b> <br>Developer </p>
     </div>
     <div class="a">
-        <img src="lufy.jpeg" style="border-radius: 50%;width: 160px;height: 160px;margin-left: 10%;">
-        <p><b>Linda Larson</b></p>
-        <p>Manager</p>
+        <img src="lufy.jpeg" >
+        <p><b>Linda Larson <br></b>manager</p>
     </div>
     <div class="a">
-        <img src="lufy.jpeg" style="border-radius: 50%;width: 160px;height: 160px;margin-left: 10%;">
-        <p><b>Marry Hudson</b></p>
-        <p>Developer</p>
+        <img src="lufy.jpeg" >
+        <p><b>Marry Hudson </b> <br>Developer </p>
     </div>
 </div>
 <div style="display: flex;">
     <div class="a" >
-        <img src="lufy.jpeg" style="border-radius: 50%;width: 160px;height: 160px;margin-left: 10%;">
-        <p><b>Lina Hudson</b></p>
-        <p>developer</p>
+        <img src="lufy.jpeg" >
+        <p><b>Lina Hudson </b> <br>Developer</p>
     </div>
     <div class="a">
-        <img src="lufy.jpeg" style="border-radius: 50%;width: 160px;height: 160px;margin-left: 10%;">
-        <p><b>Margo Larson</b></p>
-        <p>Manager</p>
+        <img src="lufy.jpeg" >
+        <p><b>Margo Larson <br></b>manager</p>
     </div>
     <div class="a" style="background-color:rgb(175, 182, 188)">
-        <img src="lufy.jpeg" style="border-radius: 50%;width: 160px;height: 160px;margin-left: 10%;">
-        <p><b>NicoleScavo</b></p>
-        <p>Manager</p>
+        <img src="lufy.jpeg" >
+        <p><b>NicoleScavo <br></b>manager</p>
     </div>
 </div>
 </div>
