--- a/shadow implementation.html
+++ b/shadow implementation.html
@@ -11,12 +11,13 @@
             box-shadow: 10px 10px 5px black;
         }
         div{
-            width: 700px;
+            max-width: 700px;
             height: 500px;
-            margin-left: 340px;
+            margin: auto;
             margin-bottom: 30px;
-            background-color: powderblue;
+            background-color: rgb(135, 140, 141);
             box-shadow: 10px 10px 5px rgb(32, 110, 152);
+            
         }
         h1{
             color: rgb(79, 33, 39);
@@ -27,7 +28,7 @@
         }
     </style>
 </head>
-<body style="text-align: center;background-color: antiquewhite;">
+<body style="text-align: center;background-image: url(download.jpeg);">
     <h1>Monkey D Luffy</h1>
     <img src="lufy.jpeg">
     <div>
