--- a/work6 shadow.html
+++ b/work6 shadow.html
@@ -15,7 +15,7 @@
             height: 500px;
             margin: auto;
             margin-bottom: 30px;
-            background-color: rgb(135, 140, 141);
+            background-color: rgba(47, 48, 48, 0.615);
             box-shadow: 10px 10px 5px rgb(32, 110, 152);
             
         }
