--- a/work5 responsivephotoalbum.html
+++ b/work5 responsivephotoalbum.html
@@ -23,24 +23,24 @@
 
 <div class="gallery">
   <div class="gallery-item">
-    <img src="photos/10.jpg" alt="Image 1">
+    <img src="lufy.jpeg" alt="Image 1">
   </div>
   <div class="gallery-item">
-    <img src="photos/9.jpg" alt="Image 2">
+    <img src="download.jpeg" alt="Image 2">
   </div>
   <div class="gallery-item">
-    <img src="photos/1.jpg" alt="Image 2">
+    <img src="lufy.jpeg" alt="Image 2">
   </div>
   </div>
   <div class="gallery" >
   <div class="gallery-item">
-    <img src="photos/2.jpg" alt="Image 2">
+    <img src="download.jpeg" alt="Image 2">
   </div>
   <div class="gallery-item">
-    <img src="photos/3.jpg" alt="Image 2">
+    <img src="lufy.jpeg" alt="Image 2">
   </div>
   <div class="gallery-item">
-    <img src="photos/9.jpg" alt="Image 2">
+    <img src="download.jpeg" alt="Image 2">
   </div>
 </div>
 
