--- a/work8 position z-index.html
+++ b/work8 position z-index.html
@@ -11,7 +11,7 @@
         .first{
             position: absolute;
             top: 100px;
-            left: 80px;
+            left: 150px;
             right: 80px;
             z-index: 1;
         }
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <div class="">
+    <div class="a">
         <h2>Don't do this, Don't you dare, You will not like it.</h2>
         <div class="first"><img src="waves.jpeg" height="800px" width="600px"></div>
         <div class="second"><img src="portrait.jpg" height="300px" width="300px"></div>
