--- a/HTML n CSS/work17 bootstrap.html
+++ b/HTML n CSS/work17 bootstrap.html
@@ -26,29 +26,29 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-sm">
-                <img src="lufy.jpeg">
+                <img src="\Images\lufy.jpeg">
                 <p><b> jonson </b> <br>Developer </p>
             </div>
             <div class="col-sm">
-                <img src="lufy.jpeg">
+                <img src="\Images\lufy.jpeg">
                 <p><b>Linda Larson <br></b>manager</p>
             </div>
             <div class="col-sm">
-                <img src="lufy.jpeg">
+                <img src="\Images\lufy.jpeg">
                 <p><b>Marry Hudson </b> <br>Developer </p>
             </div>
         </div>
         <div class="row">
             <div class="col-sm">
-                <img src="lufy.jpeg">
+                <img src="\Images\lufy.jpeg">
                 <p><b>Lina Hudson </b> <br>Developer</p>
             </div>
             <div class="col-sm">
-                <img src="lufy.jpeg">
+                <img src="\Images\lufy.jpeg">
                 <p><b>Margo Larson <br></b>manager</p>
             </div>
             <div class="col-sm">
-                <img src="lufy.jpeg">
+                <img src="\Images\lufy.jpeg">
                 <p><b>NicoleScavo <br></b>manager</p>
             </div>
         </div>
