--- a/HTML n CSS/work20 coffee n tea.html
+++ b/HTML n CSS/work20 coffee n tea.html
@@ -7,40 +7,46 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <style>
-            .container{
-                width: 800px;
-                background-color: white;
-                height: 470px;
-            }
-            .explore{
-                padding: 5px 30px 5px 30px;
-                border-radius: 20px;
-                background-color: rgb(137, 78, 34);
-                color: white;
-            }
-            .teacoffee{
-                position: relative;
-            }
-            .tea{
-                position: absolute;
-                top: 200px;
-                left: 880px;
-            }
-            .coffee{
-                position: absolute;
-                top: 35px;
-            }
-            .middle{
-                position: absolute;
-                top: 66%;
-                left: 33%;
-            }
-            .bottom{
-                background-color: rgb(60, 52, 29);
-            }
-            
-        </style>
+    <style>
+        .container {
+            width: 800px;
+            background-color: white;
+            height: 470px;
+        }
+
+        .explore {
+            padding: 5px 30px 5px 30px;
+            border-radius: 20px;
+            background-color: rgb(137, 78, 34);
+            color: white;
+        }
+
+        .teacoffee {
+            position: relative;
+        }
+
+        .tea {
+            position: absolute;
+            top: 200px;
+            left: 880px;
+        }
+
+        .coffee {
+            position: absolute;
+            top: 35px;
+        }
+
+        .middle {
+            position: absolute;
+            top: 66%;
+            left: 33%;
+        }
+
+        .bottom {
+            background-color: rgb(60, 52, 29);
+
+        }
+    </style>
 </head>
 
 <body style="background-color: black;">
@@ -48,9 +54,10 @@
         <div class="row">
             <div class="col-6" style="font-size: 15px;">
                 <h1 class="mt-5 ms-5"> Your coffee <br> Your vibe<br> Your energy</h1>
-                <p class="mt-4 ms-5" style="margin-right: 70px;"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam dolore voluptate repellendus
+                <p class="mt-4 ms-5" style="margin-right: 70px;"> Lorem ipsum dolor sit amet consectetur, adipisicing
+                    elit. Numquam dolore voluptate repellendus
                     beatae unde animi nostrum minima soluta</p>
-                    <button class="explore ms-5">Explore</button>
+                <button class="explore ms-5">Explore</button>
             </div>
             <div class="col-6">
                 <div class="teacofee">
@@ -63,29 +70,32 @@
                 </div>
             </div>
         </div>
-        <div class="middle">
-            <div class="row" style="background-color:antiquewhite;width: 500px;border-radius: 50px;text-align: center;">
-                <div class="col">
-                    <img src="https://img.icons8.com/?size=100&id=9bJspZ2v8DnH&format=png&color=000000" class="rounded-circle ms-3" style="width: 20px;height: 20px;">
-                    <h5>190+</h5>
-                    <p style="font-size: small;">Lorem ipsum dolor sit amet consectetur</p>
-                </div> 
-                <div class="col">
-                    <img src="https://img.icons8.com/?size=100&id=9bJspZ2v8DnH&format=png&color=000000" class="rounded-circle ms-3" style="width: 20px;height: 20px;">
-                    <h5>123k</h5>
-                    <p style="font-size: small;">Lorem ipsum dolor sit amet consectetur</p>
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/?size=100&id=9bJspZ2v8DnH&format=png&color=000000" class="rounded-circle ms-3" style="width: 20px;height: 20px;">
-                    <h5>58</h5>
-                    <p style="font-size: small;">Lorem ipsum dolor sit amet consectetur</p>
-                </div>
+        <div class="row middle"
+            style="background-color:antiquewhite;width: 500px;border-radius: 50px;text-align: center;">
+            <div class="col">
+                <img src="https://img.icons8.com/?size=100&id=9bJspZ2v8DnH&format=png&color=000000"
+                    class="rounded-circle ms-3" style="width: 20px;height: 20px;">
+                <h5>190+</h5>
+                <p style="font-size: small;">Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+            <div class="col">
+                <img src="https://img.icons8.com/?size=100&id=9bJspZ2v8DnH&format=png&color=000000"
+                    class="rounded-circle ms-3" style="width: 20px;height: 20px;">
+                <h5>123k</h5>
+                <p style="font-size: small;">Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+            <div class="col">
+                <img src="https://img.icons8.com/?size=100&id=9bJspZ2v8DnH&format=png&color=000000"
+                    class="rounded-circle ms-3" style="width: 20px;height: 20px;">
+                <h5>58</h5>
+                <p style="font-size: small;">Lorem ipsum dolor sit amet consectetur</p>
             </div>
         </div>
+
         <div class="bottom">
             <img src="images.jpg" alt="coffe beans" class="bottom">
         </div>
-        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
