--- a/javascript/daily task/29 aug/product of numbers.html
+++ b/javascript/daily task/29 aug/product of numbers.html
@@ -7,15 +7,13 @@
   </head>
   <body>
     <script>
-      var a = parseInt(prompt("enter a number :"));
-      var b = a.toString();
-      var c = b.split("");
-      temp = c[0];
-      c[0] = c[c.length - 1];
-      c[c.length - 1] = temp;
-      c.join();
-
-      console.log(c);
+      var num = parseInt(prompt("enter a number :"));
+      var sum = 1;
+      numstr = num.toString();
+      for (let i = 0; i < numstr.length; i++) {
+        sum = sum * parseInt(numstr[i]);
+      }
+      alert(sum);
     </script>
   </body>
 </html>
