--- a/javascript/class work/work 1 inner.html/work 1 inner html.html
+++ b/javascript/class work/work 1 inner.html/work 1 inner html.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>  
@@ -17,4 +17,4 @@
     <button onclick="hello()">click</button>
 </body>
 
-</html>
+</html> -->
